Fix scrollbar

--- a/src/sections/presentations.scss
+++ b/src/sections/presentations.scss
@@ -60,7 +60,7 @@ $panel-width: 290px;
     padding: 8px 0;
     position: absolute;
     top: 49px;
-    height: calc(100vh - 105px);
+    height: calc(100vh - 120px);
     width: $panel-width;
     background-color: $brand-bg;
     -webkit-transition: all 0.5s; /* Safari 3.1 to 6.0 */
